--- a/Pemesanan/index.html
+++ b/Pemesanan/index.html
@@ -177,7 +177,7 @@
         <div class="rectangle-1"></div>
         <div class="rectangle-2"></div>
         <div class="home">
-          <a href="../Home%20page/index.html" class="home2">HOME</a>
+          <a href="../index.html" class="home2">HOME</a>
         </div>
         <div class="sanpe">
           <a href="../Pemesanan/index.html" class="sanpe2">PEMESANAN</a>
