--- a/Support/index.html
+++ b/Support/index.html
@@ -170,7 +170,7 @@
         <div class="rectangle-1"></div>
         <div class="rectangle-2"></div>
         <div class="home">
-          <a href="../Home%20page/index.html" class="home2">HOME</a>
+          <a href="../index.html" class="home2">HOME</a>
         </div>
         <div class="pemesanan">
           <a href="../Pemesanan/index.html" class="pemesanan2">PEMESANAN</a>
