--- a/accountLoggin/index.html
+++ b/accountLoggin/index.html
@@ -116,7 +116,7 @@
         <div class="rectangle-1"></div>
         <div class="rectangle-2"></div>
         <div class="home">
-          <a href="../Home%20page/index.html" class="home2">HOME</div>
+          <a href="../index.html" class="home2">HOME</div>
         </div>
         <div class="pemesanan">
           <a href="../Pemesanan/index.html" class="pemesanan2">PEMESANAN</a>
