Search bar returned to the index

--- a/accountLogged/index.html
+++ b/accountLogged/index.html
@@ -56,7 +56,7 @@
         <div class="rectangle-1"></div>
         <div class="rectangle-2"></div>
         <div class="home">
-          <a href="../Home%20page/index.html" class="home2">HOME</div>
+          <a href="../index.html" class="home2">HOME</div>
         </div>
         <div class="pemesanan">
           <a href="../Pemesanan/index.html" class="pemesanan2">PEMESANAN</a>
@@ -78,7 +78,7 @@
           src="image-30.png"
         />
         <div class="searchbar-container">
-          <form action="../Home page/index.html" method="get">
+          <form action="../index.html" method="get">
               <input type="text" name="q" class="search-input" placeholder="Search..." />
               <button type="submit" class="search-btn">
                   <img class="search-icon" src="search-icon-20.png" />
