--- a/fasilitas/index.html
+++ b/fasilitas/index.html
@@ -497,7 +497,7 @@
           src="image-30.png"
         />
         <div class="searchbar-container">
-          <form action="../Home page/index.html" method="get">
+          <form action="../index.html" method="get">
               <input type="text" name="q" class="search-input" placeholder="Search..." />
               <button type="submit" class="search-btn">
                   <img class="search-icon" src="search-icon-20.png" />
